defectdojo/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${STATEFUL_SET}
spec:
  serviceName: ${SERVICE}
  selector:
    matchLabels:
      service: ${SERVICE}
  volumeClaimTemplates:
  - metadata:
      name: ${MEDIA_VOLUME}
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      labels:
        service: ${SERVICE}
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      runtimeClassName: gvisor
      securityContext:
        runAsUser: 65534 # nobody

      containers:
      - name: nginx
        image: ${DD_NGINX_IMAGE}
        ports:
        - name: ${TARGET_PORT}
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /login
            port: ${TARGET_PORT}
        volumeMounts:
        - name: ${MEDIA_VOLUME}
          mountPath: /usr/share/nginx/media
          readOnly: true

      - name: uwsgi
        image: ${DD_DJANGO_IMAGE}
        command:
        - /entrypoint-uwsgi.sh
        volumeMounts:
        - name: media
          mountPath: /app/media

      - name: celerybeat
        image: ${DD_DJANGO_IMAGE}
        command:
        - /entrypoint-celery-beat.sh
      - name: celeryworker
        image: ${DD_DJANGO_IMAGE}
        command:
        - /entrypoint-celery-worker.sh
      - name: rabbitmq
        image: rabbitmq
      - name: initializer
        image: ${DD_DJANGO_IMAGE}
        command: ['sh', '-c', '/entrypoint-initializer.sh && sleep infinity']
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy
        command:
        - /cloud_sql_proxy
        - -instances=${SQL_INSTANCE_URI}
