defectdojo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  annotations:
    cloud.google.com/neg: |
      {
        "ingress": true
      }
    beta.cloud.google.com/backend-config: |
      {
        "ports": {
          "http": "${BACKEND_CONFIG}"
        }
      }
spec:
  type: NodePort
  selector:
    service: ${SERVICE}
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ${SERVICE}
  template:
    metadata:
      labels:
        service: ${SERVICE}
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      containers:
      - name: nginx
        image: defectdojo/defectdojo-nginx
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /login
            port: http
        resources:
          requests:
            cpu: 50m

      - name: uwsgi
        image: ${DD_IMAGE}
        command:
        - /entrypoint-uwsgi.sh
        resources:
          requests:
            cpu: 50m

      - name: celerybeat
        image: ${DD_IMAGE}
        command:
        - /entrypoint-celery-beat.sh
        resources:
          requests:
            cpu: 50m

      - name: celeryworker
        image: ${DD_IMAGE}
        command:
        - /entrypoint-celery-worker.sh
        resources:
          requests:
            cpu: 50m

      - name: initializer
        image: ${DD_IMAGE}
        command: ['sh', '-c', '/entrypoint-initializer.sh && sleep infinity']
        resources:
          requests:
            cpu: 50m

      - name: rabbitmq
        image: rabbitmq
        resources:
          requests:
            cpu: 50m
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy
        command:
        - /cloud_sql_proxy
        - -instances=${PROJECT_ID}:${SQL_REGION}:${SQL_INSTANCE}=tcp:${DD_DATABASE_PORT}
        securityContext:
          runAsUser: 2 # non-root user
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 50m
