defectdojo/deploy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: defectdojo
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: defectdojo
    networking.gke.io/managed-certificates: defectdojo
spec:
  backend:
    serviceName: defectdojo
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: defectdojo
  annotations:
    cloud.google.com/neg: |
      {
        "ingress": true
      }
    beta.cloud.google.com/backend-config: |
      {
        "ports": {
          "80": "defectdojo"
        }
      }
spec:
  type: NodePort
  selector:
    service: defectdojo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defectdojo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: defectdojo
  template:
    metadata:
      labels:
        service: defectdojo
    spec:
      serviceAccountName: defectdojo
      containers:
      - name: nginx
        image: defectdojo/defectdojo-nginx
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
        resources:
          requests:
            cpu: 50m

      - name: uwsgi
        image: ${DOJO_DOCKER}
        command:
        - /entrypoint-uwsgi.sh
        resources:
          requests:
            cpu: 50m

      - name: celerybeat
        image: ${DOJO_DOCKER}
        command:
        - /entrypoint-celery-beat.sh
        resources:
          requests:
            cpu: 50m

      - name: celeryworker
        image: ${DOJO_DOCKER}
        command:
        - /entrypoint-celery-worker.sh
        resources:
          requests:
            cpu: 50m

      - name: initializer
        image: ${DOJO_DOCKER}
        command: ['sh', '-c', '/entrypoint-initializer.sh && sleep infinity']
        resources:
          requests:
            cpu: 50m

      - name: rabbitmq
        image: rabbitmq
        resources:
          requests:
            cpu: 50m
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy
        command:
        - /cloud_sql_proxy
        - -instances=${PROJECT_ID}:${SQL_REGION}:${SQL_INSTANCE}=tcp:${DD_DATABASE_PORT}
        securityContext:
          runAsUser: 2 # non-root user
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 50m
