defectdojo/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: defectdojo
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
    kubernetes.io/ingress.global-static-ip-name: ${IP_NAME}
    networking.gke.io/managed-certificates: ${MANAGED_CERT}
spec:
  backend:
    serviceName: ${SERVICE}
    servicePort: http
